# chess_clock_v2

./: .gitignore  CMakeLists.txt
Core/Inc/: events.h  main.h  stm32f4xx_hal_conf.h  time.h
Core/Src/: main.c  stm32f4xx_it.c
buttons/: buttons.c  buttons.h
cmake/: compiler_flags.cmake
config/: config.c  config.h  config_bonus.c  config_bonus_control.c  config_fixed.c  config_fixed_control.c
display/: display.c  display.h
events/: events.c  events.h
game/: bonus.c  bonus_control.c  fixed.c  fixed_control.c  game.c  game.h  mode_interface.h
hd44780/: hd44780.c  hd44780.h
mode/: bonus.c  bonus_control.c  config_view.h  fixed.c  fixed_control.c  game_controller.h  mode.c  mode.h  mode_builder.h  mode_interface.h
mode/bonus/: bonus.c  edit_bonus.c  mode_bonus.h
mode/bonus_control/: bonus_control.c  config_bonus_control.c  edit_bonus_control.c  mode_bonus_control.h
mode/fixed/: config_fixed.c  edit_fixed.c  fixed.c  mode_fixed.h
mode/fixed_control/: config_fixed_control.c  fixed_control.c  mode_fixed_control.h
modes/: bonus.c  bonus_control.c  fixed.c  fixed_control.c  modes.c  modes.h
periodic_tasks/: periodic_tasks.c
src/: CMakeLists.txt  moves.h  player.h
src/Core/Src/: main.c  syscalls.c
src/Drivers/: CMakeLists.txt
src/buttons/: buttons.c
src/display/: display.h
src/hd44780/: hd44780.h
src/mode/: config_controller.h  game_controller.h  mode_builder.h
src/mode/bonus/: bonus.c  config_bonus.c
src/mode/bonus_control/: edit_bonus_control.c
src/mode/fixed/: edit_fixed.c  fixed.c  mode_fixed.h
src/mode/fixed_control/: edit_fixed_control.c  fixed_control.c
src/periodic_tasks/: periodic_tasks.h
src/state_machine/: state.h  state_machine.c
src/state_machine/state_config/: state_config.c  state_config.h
src/state_machine/state_edit/: state_edit.h
src/state_machine/state_game/: state_game.h
src/state_machine/state_mode/: state_mode.c  state_mode.h
src/turn/: turn.h
state_machine/: state.h  state_machine.c  state_machine.h
state_machine/state_config/: state_config.c  state_config.h
state_machine/state_edit/: state_edit.c  state_edit.h
state_machine/state_game/: state_game.c  state_game.h
state_machine/state_mode/: state_mode.c  state_mode.h
test/unit_test/config/: CMakeLists.txt  config_bonus_control_test.c  config_bonus_test.c  config_fixed_control_test.c  config_fixed_test.c  config_test_main.c  config_test_runner.c  display_mocks.c  display_mocks.h
test/unit_test/edit/: CMakeLists.txt  display_mocks.c  edit_bonus_control_test.c  edit_bonus_test.c  edit_fixed_control_test.c  edit_fixed_test.c  edit_test_main.c  edit_test_runner.c
test/unit_test/events/: CMakeLists.txt  events_test.c  events_test_main.c  events_test_runner.c
test/unit_test/fff/: CMakeLists.txt
test/unit_test/game_modes/: CMakeLists.txt  game_mode_bonus_control_test.c  game_mode_bonus_test.c  game_mode_fixed_control_test.c  game_mode_fixed_test.c  game_modes_test_main.c  game_modes_test_runner.c  mocks.c
test/unit_test/preset_modes/: CMakeLists.txt  mocks.c  preset_modes_fixed_test.c  preset_modes_test_main.c  preset_modes_test_runner.c  stm32f4xx.h
test/unit_test/template/: CMakeLists.txt  template_test.c  template_test_main.c  template_test_runner.c
test/unit_test/unity/: CMakeLists.txt
test/unit_test/unity/core/: unity.h
turn/: turn.c  turn.h
